WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
196179
[Apple Pay] Call +canMakePayments on a work queue
https://bugs.webkit.org/show_bug.cgi?id=196179
Summary
[Apple Pay] Call +canMakePayments on a work queue
Andy Estes
Reported
2019-03-23 14:43:16 PDT
[Apple Pay] Call +canMakePayments on a work queue
Attachments
Patch
(6.72 KB, patch)
2019-03-23 14:49 PDT
,
Andy Estes
no flags
Details
Formatted Diff
Diff
Patch
(7.01 KB, patch)
2019-03-23 14:59 PDT
,
Andy Estes
no flags
Details
Formatted Diff
Diff
Patch
(6.96 KB, patch)
2019-03-25 12:45 PDT
,
Andy Estes
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Andy Estes
Comment 1
2019-03-23 14:45:53 PDT
rdar://problem/45388749
Andy Estes
Comment 2
2019-03-23 14:49:07 PDT
Comment hidden (obsolete)
Created
attachment 365817
[details]
Patch
EWS Watchlist
Comment 3
2019-03-23 14:51:03 PDT
Comment hidden (obsolete)
Attachment 365817
[details]
did not pass style-queue: ERROR: Source/WebKit/Shared/ApplePay/WebPaymentCoordinatorProxy.cpp:48: Code inside a namespace should not be indented. [whitespace/indent] [4] Total errors found: 1 in 5 files If any of these errors are false positives, please file a bug against check-webkit-style.
Andy Estes
Comment 4
2019-03-23 14:59:25 PDT
Comment hidden (obsolete)
Created
attachment 365818
[details]
Patch
EWS Watchlist
Comment 5
2019-03-23 15:01:46 PDT
Comment hidden (obsolete)
Attachment 365818
[details]
did not pass style-queue: ERROR: Source/WebKit/Shared/ApplePay/WebPaymentCoordinatorProxy.cpp:48: Code inside a namespace should not be indented. [whitespace/indent] [4] Total errors found: 1 in 5 files If any of these errors are false positives, please file a bug against check-webkit-style.
WebKit Commit Bot
Comment 6
2019-03-25 12:40:57 PDT
Comment hidden (obsolete)
Comment on
attachment 365818
[details]
Patch Rejecting
attachment 365818
[details]
from commit-queue. Failed to run "['/Volumes/Data/EWS/WebKit/Tools/Scripts/webkit-patch', '--status-host=webkit-queues.webkit.org', '--bot-id=webkit-cq-03', 'apply-attachment', '--no-update', '--non-interactive', 365818, '--port=mac']" exit_code: 2 cwd: /Volumes/Data/EWS/WebKit Logging in as
commit-queue@webkit.org
... Fetching:
https://bugs.webkit.org/attachment.cgi?id=365818&action=edit
Fetching:
https://bugs.webkit.org/show_bug.cgi?id=196179
&ctype=xml&excludefield=attachmentdata Processing 1 patch from 1 bug. Processing patch 365818 from
bug 196179
. Fetching:
https://bugs.webkit.org/attachment.cgi?id=365818
Failed to run "[u'/Volumes/Data/EWS/WebKit/Tools/Scripts/svn-apply', '--force', '--reviewer', u'Brady Eidson']" exit_code: 1 cwd: /Volumes/Data/EWS/WebKit Parsed 5 diffs from patch file(s). patching file Source/WebKit/ChangeLog Hunk #1 succeeded at 1 with fuzz 3. patching file Source/WebKit/Shared/ApplePay/WebPaymentCoordinatorProxy.cpp Hunk #2 succeeded at 71 (offset -5 lines). patching file Source/WebKit/Shared/ApplePay/WebPaymentCoordinatorProxy.h Hunk #2 FAILED at 135. Hunk #3 succeeded at 184 (offset -2 lines). 1 out of 3 hunks FAILED -- saving rejects to file Source/WebKit/Shared/ApplePay/WebPaymentCoordinatorProxy.h.rej patching file Source/WebKit/Shared/ApplePay/ios/WebPaymentCoordinatorProxyIOS.mm patching file Source/WebKit/Shared/ApplePay/mac/WebPaymentCoordinatorProxyMac.mm Failed to run "[u'/Volumes/Data/EWS/WebKit/Tools/Scripts/svn-apply', '--force', '--reviewer', u'Brady Eidson']" exit_code: 1 cwd: /Volumes/Data/EWS/WebKit Full output:
https://webkit-queues.webkit.org/results/11662548
Andy Estes
Comment 7
2019-03-25 12:45:58 PDT
Created
attachment 365883
[details]
Patch
WebKit Commit Bot
Comment 8
2019-03-25 13:23:48 PDT
Comment on
attachment 365883
[details]
Patch Clearing flags on attachment: 365883 Committed
r243447
: <
https://trac.webkit.org/changeset/243447
>
WebKit Commit Bot
Comment 9
2019-03-25 13:23:50 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug