Source/WebKit/Shared/ApplePay/WebPaymentCoordinatorProxy.h
@@ -34,6 +34,7 @@
 #include <wtf/Forward.h>
 #include <wtf/RetainPtr.h>
 #include <wtf/WeakPtr.h>
+#include <wtf/WorkQueue.h>
 
 #if USE(APPLE_INTERNAL_SDK)
 #include <WebKitAdditions/WebPaymentCoordinatorProxyAdditions.h>
@@ -132,7 +133,7 @@ private:
     void didReachFinalState();
     void hidePaymentUI();
 
-    bool platformCanMakePayments();
+    void platformCanMakePayments(CompletionHandler<void(bool)>&&);
     void platformCanMakePaymentsWithActiveCard(const String& merchantIdentifier, const String& domainName, PAL::SessionID, WTF::Function<void(bool)>&& completionHandler);
     void platformOpenPaymentSetup(const String& merchantIdentifier, const String& domainName, WTF::Function<void(bool)>&& completionHandler);
     void platformShowPaymentUI(const URL& originatingURL, const Vector<URL>& linkIconURLs, PAL::SessionID, const WebCore::ApplePaySessionPaymentRequest&, CompletionHandler<void(bool)>&&);
@@ -183,6 +184,7 @@ private:
     } m_merchantValidationState { MerchantValidationState::Idle };
 
     std::unique_ptr<PaymentAuthorizationPresenter> m_authorizationPresenter;
+    Ref<WorkQueue> m_canMakePaymentsQueue;
 
 #if PLATFORM(MAC)
     uint64_t m_showPaymentUIRequestSeed { 0 };
